tdf#54204 File URLs with fragment need toIUri conversion

Non-ASCII file links didn't work when the link contains anchor at
the end.

Note: The "correct" way to convert from a LO-internal to -external
file URL would be the translateToExternal method of the
css.uri.ExternalUriReferenceTranslator UNO service.  But that
translates the URL to be interpreted according to the current Windows
code page (i.e., osl_getThreadTextEncoding), so only supports
characters covered by that code page, and given that  the result is
passed into a Windows wchar_t API, ToIUri nicely avoids such potential
conversion failure.

Change-Id: I1a5b07366b0fea3da2fbe11a9378aacd765b5e04
Reviewed-on: https://gerrit.libreoffice.org/82219
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>